# code-20220216-himanshugarg

./: README.md  pyproject.toml  setup.py
configs/: mockData.json
src/bmi_calculator/: server.py  utils.py
src/bmi_calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_e2e.py
