[tool.poetry]
name = "bmi-calculator"
version = "0.1.0"
description = ""
authors = ["Himanshu"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.73.0"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
